# rusted-invidious-notifications

./: Cargo.toml
src/: main.rs
