[package]
name = "rusted-notification-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5", features = ["ws"]}
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rdkafka  = "0.28"
scylla = "0.4"